--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Top Yakalama Oyunu</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="gameArea">
+    <div id="scoreBoard">Skor: 0</div>
+    <div id="player"></div>
+    <div id="ball"></div>
+  </div>
+
+  <div id="controls">
+    <button id="leftBtn">⬅️</button>
+    <button id="rightBtn">➡️</button>
+  </div>
+
+  <script src="game.js"></script>
+</body>
+</html>
 
